--- a/com/torula.art/art/enter_active/manual_en.html
+++ b/com/torula.art/art/enter_active/manual_en.html
@@ -18,16 +18,18 @@
             <h1>Interactions</h1>
         </div>
         <div id='content'>
-            <h3><span class="bold">1. Enter gomb, klikk a képen, sarok menü:</span> képszekvencia léptetése</h3>
+            <h3><span class="bold">1. Enter gomb, klikk a képen:</span> képszekvencia léptetése</h3>
             <h3><span class="bold">2. Jobb és bal nyil gomb, nyil navigáció:</span> mûvek közti váltás</h3>
             <h3><span class="bold">3. Fel és le nyil gomb</span> képszekvencia elôre-hátra léptetése</h3>
-            <h3><span class="bold">4. Space gomb, kattintás a logón:</span> Felhasználói felület elrejtése</h3>
-            <h3><span class="bold">5. F gomb, sarok menü:</span> Teljes képernyô</h3>
-            <h3><span class="bold">6. Esc gomb:</span> Teljes képernyô elhagyása</h3>
-            <h3><span class="bold">7. Backspace gomb:</span> Vissza a galériához</h3>
+            <h3><span class="bold">4. Egér scroll:</span> Zoomolás</h3>
+            <h3><span class="bold">5. Klikk és egér mozgatás:</span> Nagyított kép mozgatása</h3>
+            <h3><span class="bold">6. Space gomb, kattintás a logón:</span> Felhasználói felület elrejtése</h3>
+            <h3><span class="bold">7. Esc gomb:</span> Teljes képernyô elhagyása</h3>
+            <h3><span class="bold">8. Backspace gomb:</span> Vissza a galériához</h3>
+            <h3><span class="bold">9. Jobboldali sarok menü:</span> Beállítások</h3>
         </div>
         <div id='cover'>
-            <img src="manual.jpg" alt="" />
+            <img src="manual.svg" alt="" />
         </div>
     </div>
 </body>
