--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -4,7 +4,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="ad.size" content="width=300,height=250" />
+  <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0">
+  <meta name="HandheldFriendly" content="true">
   <title>Piece of Change</title>
 
   <script type="text/javascript" src="js/tweenmax.js"></script>
@@ -14,21 +15,28 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&display=swap');
-    </style>
+  </style>
 
   <style type="text/css">
     html,
     body {
       -webkit-text-size-adjust: 100%;
       -webkit-font-smoothing: antialiased;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       font-size: 23px;
       margin: 0;
       padding: 0;
       overscroll-behavior: none;
       font-family: 'Inconsolata', monospace;
       color: white;
+    }
+
+    body {
+      top: 0;
+      left: 0;
+      position: fixed;
+      overflow: hidden;
     }
 
     #main {
@@ -40,12 +48,14 @@
       position: relative;
       display: none;
     }
+
     #camcorder {
       overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
     }
+
     #camera {
       width: 100%;
       height: auto;
@@ -58,7 +68,7 @@
     <div id='camcorder'>
       <video id="camera" autoplay></video>
     </div>
-    
+
     <img id="bg" src="img/bg.png" />
     <img id="front" src="img/front.jpg" />
     <canvas id="canvas_bg"></canvas>
