--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 
-<body>
+<body id="body">
   <div id="main">
     <div id='camcorder'>
       <video id="camera" autoplay></video>
