--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -22,8 +22,6 @@
     body {
       -webkit-text-size-adjust: 100%;
       -webkit-font-smoothing: antialiased;
-      width: 100vw;
-      height: 100vh;
       font-size: 23px;
       margin: 0;
       padding: 0;
@@ -42,8 +40,8 @@
     #main {
       background: black;
       cursor: cell;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
       position: relative;
       display: none;
