--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -27,23 +27,21 @@
       padding: 0;
       overscroll-behavior: none;
       font-family: 'Inconsolata', monospace;
-      color: white;
+      color: black;
+      background: black;
+      overflow: hidden;
     }
 
     body {
       top: 0;
       left: 0;
       position: fixed;
-      overflow: hidden;
     }
 
     #main {
       background: black;
       cursor: cell;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      position: relative;
+      position: absolute;
       display: none;
     }
 
