--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -25,6 +25,8 @@
       font-size: 23px;
       margin: 0;
       padding: 0;
+      width: 100%;
+      height: 100%;
       overscroll-behavior: none;
       font-family: 'Inconsolata', monospace;
       color: black;
