--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap');
   </style>
 
   <style type="text/css">
@@ -38,6 +38,7 @@
       top: 0;
       left: 0;
       position: fixed;
+      perspective: 1000px;
     }
 
     #main {
@@ -45,6 +46,9 @@
       cursor: cell;
       position: absolute;
       display: none;
+      transform: rotateY(-360deg);
+      width: 100%;
+      transform-origin: 50% 50%;
     }
 
     #camcorder {
@@ -52,11 +56,44 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      transform-style: preserve-3d;
     }
 
     #camera {
       width: 100%;
       height: auto;
+      transform: scaleX(-100%);
+      transform-style: preserve-3d;
+    }
+
+    #message {
+      left: 0;
+      top: unset;
+      margin-left: 50%;
+      transform: translate(-50%);
+      color: white;
+      white-space: nowrap;
+      text-shadow: #000 0px 0px 10px;
+      display: none;
+    }
+
+    #button {
+      position: absolute;
+      width: auto;
+      height: min(6.5vh, 6.5vw);
+      top: unset;
+      bottom: 3vh;
+      left: 50%;
+      opacity: 0.4;
+      transform: translateX(-50%) rotateX(80deg);
+      cursor: pointer;
+      -webkit-transition: opacity 0.5s;
+      transition: opacity 0.5s;
+      display: none;
+    }
+
+    #button:hover {
+      opacity: 1;
     }
   </style>
 </head>
@@ -65,6 +102,7 @@
   <div id="main">
     <div id='camcorder'>
       <video id="camera" autoplay></video>
+      <div id="message">your data is our future</div>
     </div>
 
     <img id="bg" src="img/bg.png" />
@@ -74,5 +112,6 @@
     <canvas id="canvas_front"></canvas>
   </div>
 </body>
+<img id="button" src="img/rotate_sqr.svg" />
 
 </html>
