--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -101,7 +101,7 @@
 <body id="body">
   <div id="main">
     <div id='camcorder'>
-      <video id="camera" autoplay></video>
+      <video id="camera" autoplay playsinline></video>
       <div id="message">your data is our future</div>
     </div>
 
