--- a/art/piece_of_change/index.html
+++ b/art/piece_of_change/index.html
@@ -84,7 +84,7 @@
       top: unset;
       bottom: 3vh;
       left: 50%;
-      opacity: 0.4;
+      opacity: 0.17;
       transform: translateX(-50%) rotateX(80deg);
       cursor: pointer;
       -webkit-transition: opacity 0.5s;
@@ -94,6 +94,9 @@
 
     #button:hover {
       opacity: 1;
+    }
+    canvas {
+      cursor: cell;
     }
   </style>
 </head>
