--- a/index.html
+++ b/index.html
@@ -1,105 +1,106 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0"/>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-    <meta name="HandheldFriendly" content="true">
-    <title>d.free</title>
-    <script src="src/tweenmax.js"></script>
-    <script src="js/site.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="css/site.css"/>
-    <script>var anim_root, anim_init, firstframe = 0;var registerAnimRoot = function(r){anim_root = r;};var registerAnimInit = function(f){anim_init = f;};var registerAnimFrame = function(){firstframe++;}</script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0" />
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <meta name="HandheldFriendly" content="true" />
+  <title>d.free</title>
+  <script src="src/tweenmax.js"></script>
+  <script src="js/site.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/site.css" />
+  <script>
+    var anim_root,
+      anim_init,
+      firstframe = 0;
+    var registerAnimRoot = function (r) {
+      anim_root = r;
+    };
+    var registerAnimInit = function (f) {
+      anim_init = f;
+    };
+    var registerAnimFrame = function () {
+      firstframe++;
+    };
+  </script>
 </head>
 
-
 <body id="body">
-    <img id="anim_cover" src="img/anim.svg"/>
+  <img id="anim_cover" src="img/anim.svg" />
 
-    <div id="anim">
-        <div id="anim_move">
-            <canvas id="canvas" width="1050" height="1050"></canvas>
-        </div>
+  <div id="anim">
+    <div id="anim_move">
+      <canvas id="canvas" width="1050" height="1050"></canvas>
     </div>
-    <div id="grid">
-        <section class="stage" id="stage_0">
-            <h1 class="r_0 c_0 title b">Your<br/>Universal<br/>Developer</h1>
-            <div class="text_body r_2 c_1 lh">I'm a UK based frontend developer and agency freelancer having spent the past 10 years exploring the evolving ways to deliver the quickest, most reliable and prettiest software possible... served online.</div>
-        </section>
+  </div>
+  <div id="grid">
+    <section class="stage" id="stage_0">
+      <h1 class="r_0 c_0 title b">Your<br />Universal<br />Developer</h1>
+      <div class="text_body r_2 c_1 lh">
+        I'm a fully remote frontend developer and agency freelancer having spent
+        the past 10 years exploring the evolving ways to deliver the quickest,
+        most reliable and prettiest software possible... served online.
+      </div>
+    </section>
 
-        <section class="stage" id="stage_1">
-            <h1 class="r_0 c_0 title b">Naturally <br/>Online</h1>
-        </section>
+    <section class="stage" id="stage_1">
+      <h1 class="r_0 c_0 title b">Naturally <br />Online</h1>
+    </section>
 
-        <section class="stage" id="stage_2">
-            <h1 class="r_0 c_0 title b">Pixel <br/>Perfect <br/>Advertising</h1>
-        </section>
+    <section class="stage" id="stage_2">
+      <h1 class="r_0 c_0 title b">Pixel <br />Perfect <br />Advertising</h1>
+    </section>
 
-        <section class="stage" id="stage_3">
-            <h1 class="r_0 c_0 title b">Rapid <br/>Prototypes</h1>
-        </section>
+    <section class="stage" id="stage_3">
+      <h1 class="r_0 c_0 title b">Rapid <br />Prototypes</h1>
+    </section>
 
-        <section class="stage" id="stage_4">
-            <h1 class="r_0 c_0 title b">Mobile Apps <br/>& AR</h1>
-        </section>
+    <section class="stage" id="stage_4">
+      <h1 class="r_0 c_0 title b">Mobile Apps <br />& AR</h1>
+    </section>
 
-        <section class="stage" id="stage_5">
-            <h1 class="r_0 c_0 title b">Gaming <br/>& VR</h1>
-        </section>
+    <section class="stage" id="stage_5">
+      <h1 class="r_0 c_0 title b">Gaming <br />& VR</h1>
+    </section>
 
+    <section class="stage" id="stage_6">
+      <h1 class="r_0 c_0 title b">Graphic <br />Design</h1>
+    </section>
 
-        <section class="stage" id="stage_6">
-            <h1 class="r_0 c_0 title b">Graphic <br/>Design</h1>
-        </section>
+    <section class="stage" id="stage_7">
+      <h1 class="r_0 c_0 title b">Contact & <br />Booking</h1>
+      <div class="text_body r_2 c_1 lh">
+        For work specific references or booking you can reach me any time at
+        <span class="b u hand" id="mail"></span> or on my
+        <span class="b u hand" id="linkedin">LinkedIn</span> profile.
+      </div>
+    </section>
+  </div>
 
-        <section class="stage" id="stage_7">
-            <h1 class="r_0 c_0 title b">Contact & <br/>Booking</h1>
-            <div class="text_body r_2 c_1 lh">For work specific references or booking you can reach me any time at <span class="b u hand" id="mail"></span> or on my <span class="b u hand" id="linkedin">LinkedIn</span> profile.</div>
-        </section>
-
+  <footer id="footer">
+    <div class="text_body r_4 c_1 mid menu_pos">
+      <span id="name" class="b">Dávid Szücs</span><br /><br /><span id="title" class="l">Swiss
+        Army<br />Freelancer</span><br /><br /><span id="title" class="l">
     </div>
-    
-    <footer id="footer">
-        <div class="text_body r_4 c_1 mid menu_pos"><span id="name" class="b">Dávid Szücs</span><br/><br/><span id="title" class="l">Swiss Army<br/>Freelancer</span></div>
-    </footer>
+  </footer>
 
-    <nav id="menu">
-        <ul>
-            <li class="menu_item" id="menu_7">
-                111
-            </li>
-            <li class="menu_item" id="menu_6">
-                110
-            </li>
-            <li class="menu_item" id="menu_5">
-                101
-            </li>
-            <li class="menu_item" id="menu_4">
-                100
-            </li>
-            <li class="menu_item" id="menu_3">
-                011
-            </li>
-            <li class="menu_item" id="menu_2">
-                010
-            </li>
-            <li class="menu_item" id="menu_1">
-                001
-            </li>
-            <li class="menu_item" id="menu_0">
-                000
-            </li>
-        </ul>
-    </nav>
-    <div id="cover"></div>
-    <div id="loader"></div>
+  <nav id="menu">
+    <ul>
+      <li class="menu_item" id="menu_7">111</li>
+      <li class="menu_item" id="menu_6">110</li>
+      <li class="menu_item" id="menu_5">101</li>
+      <li class="menu_item" id="menu_4">100</li>
+      <li class="menu_item" id="menu_3">011</li>
+      <li class="menu_item" id="menu_2">010</li>
+      <li class="menu_item" id="menu_1">001</li>
+      <li class="menu_item" id="menu_0">000</li>
+    </ul>
+  </nav>
+  <div id="cover"></div>
+  <div id="loader"></div>
 </body>
+
 </html>
-
-
-
-
-
-
