--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="text_body r_2 c_1 lh">
         I'm a fully remote frontend developer and agency freelancer having spent
         the past 15 years exploring the evolving ways to deliver the quickest,
-        most reliable and prettiest software possible... served online.
+        most reliable, and prettiest software possible... served online.
       </div>
     </section>
 
