--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="stage" id="stage_0">
       <h1 class="r_0 c_0 title b">Your<br />Universal<br />Developer</h1>
       <div class="text_body r_2 c_1 lh">
-        I'm a fully remote frontend developer and agency freelancer having spent
+        I'm a fully remote senior frontend developer and agency freelancer having spent
         the past 15 years exploring the evolving ways to deliver the quickest,
         most reliable, and prettiest software possible... served online.
       </div>
