--- a/common/campAR/src/index.html
+++ b/common/campAR/src/index.html
@@ -14,7 +14,8 @@
 <body>
     <div id="control-ui">
     </div>
-    <div id="tap-to-place" class-="hide">Tap here to place the object</div>
+    <div id="tap-to-place" class="button hidden">Tap to place</div>
+    <div id="reset" class="button hidden">Reset</div>
     
 </body>
 
