--- a/common/campAR/src/index.html
+++ b/common/campAR/src/index.html
@@ -3,20 +3,18 @@
 
 <head>
     <meta charset="utf-8" />
-
-    <!-- USE A MOBILE APPROPRIATE VIEWPORT SETTING SO THE UI APPEARS THE RIGHT SIZE -->
     <meta name="viewport" content="width=device-width,user-scalable=no,minimal-ui" />
-    
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
 
+    </style>
 </head>
 
 <body>
-    <div id="control-ui">
-    </div>
-    <div id="tap-to-place" class="button hidden">Tap to place</div>
-    <div id="reset" class="button hidden">Reset</div>
-    
+  <div id="control-ui">
+  </div>
+  <div id="tap-to-place" class="button hidden">Tap to place</div>
+  <div id="reset" class="button hidden">Reset</div>
 </body>
 
 </html>
