--- a/common/recursive.gallery/recursive-bits/exhibition-cover-2/index.html
+++ b/common/recursive.gallery/recursive-bits/exhibition-cover-2/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>CodePen - Channel Surfing by Markus Magnusson (in svg)</title>
   <link rel="stylesheet" href="./style.css">
+  <script src="../../recursive.js"></script>
 
 </head>
 
