--- a/common/recursive.gallery/recursive-bits/artwork-1/index.html
+++ b/common/recursive.gallery/recursive-bits/artwork-1/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - more conceiously </title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Pattern Images</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>CodePen - more conceiously </title>
+  <link rel="stylesheet" href="./style.css">
+  <script src="../../recursive.js"></script>
 </head>
 
 <body>
@@ -24,12 +14,7 @@
 
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
+<script src="script.js"></script>
 
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
 </html>
